contribution from 31.05.2019